Add swagger
